# AutoResearch-MRL

./: .gitignore  README.md  RESULTS.md  analysis.ipynb  evaluate.py  fix_run_loop.py  generate_figures.py  prepare.py  program.md  pyproject.toml  results.tsv  run_loop.py  setup.sh  start.sh  sync_results.py  train.py
reports/: 01_baselines.md  02_optimization.md  final_report.md
reports/figures/: .last_hash
reports/figures/run_20260314_062847_f4d1db/: metadata.json  planning.json
reports/figures/run_20260314_062847_f4d1db/iter_1/: details.json
reports/figures/run_20260314_062847_f4d1db/iter_2/: details.json
reports/figures/run_20260314_062926_b69a6b/: metadata.json  planning.json
reports/figures/run_20260314_062926_b69a6b/iter_1/: details.json
reports/figures/run_20260314_062926_b69a6b/iter_2/: details.json
