[project]
name = "autoresearch-mrl"
version = "0.1.0"
description = "Autonomous Research in Manipulation Robot Learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "lerobot>=0.1.0",
    "torch>=2.0.0",
    "numpy",
    "pandas",
    "matplotlib",
    "gymnasium",
    "gym-pusht",
    "gym-aloha",
]

[project.optional-dependencies]
libero = ["libero"]
vla = ["transformers", "accelerate"]
analysis = ["seaborn", "scipy", "jupyter"]
all = ["autoresearch-mrl[libero,vla,analysis]"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
